@@ -9,6 +9,7 @@ dpkg (1.15.12) UNRELEASED; urgency=high
   * Fix OpenPGP armored signature parsing, to be resilient against doctored
     input, including source package control files. Closes: #695919
   * Make sure the OpenGPG armor contains a signature block, even on EOF.
+  * Do not accept Armor Header Lines inside a paragraph.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 01 May 2015 22:02:43 +0200
 
